# nlp2-gr5

./: README.md  logistic_regression_misclassified.csv  main.py  pyproject.toml  svm_misclassified.csv  test_training.py
results/: CNN_misclassified.csv  best_model_LSTM_misclassified.csv  best_model_lr_misclassified.csv  cnn_history.json  cnn_metrics.json  logistic_regression_metrics.json  logistic_regression_misclassified.csv  lstm_history.json  lstm_metrics.json  svm_metrics.json  svm_misclassified.csv
src/: data.py  evaluation.py  models.py  preprocessing.py
